# fantasy-db

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
apps/: __init__.py  query.py
apps/backtester/: __init__.py  calibrate.py  cli.py  evaluate.py
apps/draft_tool/: __init__.py  board.py  cli.py
apps/projections/: __init__.py  cli.py  model.py  scoring.py
apps/waiver_analyzer/: __init__.py
config/: __init__.py  leagues.yaml  scoring.yaml  settings.py  sources.yaml
db/: __init__.py  connection.py  migrate.py
db/migrations/: 001_init_dimensions.sql  002_add_marts.sql  003_scoring_settings.sql
memory/: MEMORY.md  dbt-migration-ownership.md  sleeper-crosswalk.md
scrapers/: __init__.py  base.py  cli.py  fantasypros.py  nflverse.py  ngs.py  pfr.py  sleeper.py  vegas.py
src/: config.ts  db.ts  ingest.ts  query.ts
src/sources/nflverse/: datasets.ts  ingest.ts
staging/: __init__.py  base.py  cli.py  nflverse.py  ngs.py  pfr.py  sleeper.py
tests/: test_backtester.py  test_cli.py  test_config.py  test_config_loader.py  test_connection.py  test_draft_tool.py  test_migrate_rollback.py  test_migrations.py  test_nflverse_scraper.py  test_projections.py  test_query_app.py  test_scrapers_base.py  test_settings.py  test_staging.py
transforms/: dbt_project.yml  profiles.yml
transforms/macros/: canonical_team.sql
transforms/models/: staging_sources.yml
transforms/models/dimensions/: dim_franchises.sql  dim_games.sql  dim_players.sql  dim_teams.sql  player_id_crosswalk.sql
transforms/models/marts/: fct_pbp.sql  (+4 more)
(+3 files in other folders)
