[project]
name = "fantasy-db"
version = "0.1.0"
description = "Ingest NFL stats from multiple sources into a local DuckDB for fantasy football analytics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1",
    "pyarrow>=18.0",
    "pandas>=2.2",
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "lxml>=5.3",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# `uv sync --extra transforms` — only needed to run the dbt marts build.
transforms = [
    "dbt-core>=1.8",
    "dbt-duckdb>=1.8",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
]

[project.scripts]
fdb-migrate = "db.migrate:main"
fdb-ingest = "scrapers.cli:main"
fdb-stage = "staging.cli:main"
fdb-query = "apps.query:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# The top-level dirs from the on-disk layout are the importable packages.
# `transforms/` (dbt) and `data/` are not Python packages.
packages = ["scrapers", "staging", "db", "config", "apps"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
